--- a/content/pages/rules/data/178/index.adoc
+++ b/content/pages/rules/data/178/index.adoc
@@ -15,7 +15,7 @@ to ensure the authenticity of sensitive information.
 
 A digital signature is a cryptographic mechanism that helps identify the sender
 of a message, and guarantee its authenticity and integrity.
-They should be used when dealing with very sensitive information or with
+It should be used when dealing with very sensitive information or with
 data and resources that are susceptible to being affected by third parties.
 
 == Findings
@@ -34,13 +34,23 @@ in a way that causes it to accept invalid data.
 The software does not verify, or incorrectly verifies,
 the cryptographic signature for data.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r3]] link:https://cwe.mitre.org/data/definitions/494.html[CWE-494: Download of Code Without Integrity Check]
+The product downloads source code or an executable from a remote location and
+executes the code without sufficiently verifying the origin and integrity of
+the code.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V1.14 Configuration Architectural Requirements.(1.14.2)]
+Verify that deploying binaries to untrusted devices makes use of binary
+signatures, trusted connections, and verified endpoints.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V3.5 Token-based Session Management.(3.5.3)]
 Verify that stateless session tokens use digital signatures, encryption, and
 other countermeasures to protect against tampering, enveloping, replay,
 null cipher, and key substitution attacks.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.3 Deployed Application Integrity Controls.(10.3.1)]
 Verify that if the application has a client or server auto-update feature,
 updates should be obtained over secure channels and digitally signed.
