--- a/content/pages/rules/credentials/133/index.adoc
+++ b/content/pages/rules/credentials/133/index.adoc
@@ -1,14 +1,14 @@
 :slug: rules/133/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining secure passwords of at least 20 characters long.
-:keywords: Requirement, Security, Credentials, Access, Password, Length
+:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining secure passwords with a length of at least 20 characters.
+:keywords: Credentials, Access, Password, Length, CWE, ASVS
 :rules: yes
 
 = REQ.133 Passwords with at least 20 characters
 
 == Requirement
 
-System passwords must be at least +20+ characters long.
+System passwords must be at least *20* characters long.
 
 == Findings
 
@@ -18,10 +18,10 @@ System passwords must be at least +20+ characters long.
 
 == References
 
-. [[r1]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.7+]
-Verify password entry fields allow, or encourage, the use of passphrases,
-and do not prevent long passphrases or highly complex passwords being entered.
+. [[r1]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
+The product does not require that users should have strong passwords,
+which makes it easier for attackers to compromise user accounts.
 
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.27+]
-Verify that measures are in place to block the use
-of commonly chosen passwords and weak pass-phrases.
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.1 Password Security Requirements.(2.1.1)]
+Verify that user set passwords are at least 12 characters in length.
