feat(doc): #2994.109 add refs to r126
- Added ASVS and CWE references to R133
- Added a Description to R126
- Updated R126 keywords
- Fixed minor typo


Former-commit-id: c90555e1bb5fef28d2959a9f67bbe13793fd4374

--- a/content/pages/rules/credentials/126/index.adoc
+++ b/content/pages/rules/credentials/126/index.adoc
@@ -1,20 +1,32 @@
 :slug: rules/126/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining a mechanism to securely regenerate users passwords.
-:keywords: Requirement, Security, Passwords, Retrieve, Restore, Credentials
+:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining a mechanism to securely regenerate user passwords.
+:keywords: Passwords, Retrieve, Restore, Credentials, ASVS, CWE
 :rules: yes
 
-= REQ.126 Set password regeneration mechanism
+= REQ.126 Set a password regeneration mechanism
 
 == Requirement
 
 The system must provide a mechanism
 to regenerate a user's password.
 
+== Description
+
+Passwords are identity assertion elements that can be easily lost or forgotten.
+Systems should have a secure mechanism that allows users to generate a new
+password when they have lost their previous one.
+Alternatively, passwords can be leaked as a result of a user's actions or a
+breach in the system,
+thus, there should also exist a secure mechanism that allows users to change
+their passwords when they require it.
+
 == References
 
-. [[r1]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.8+]
-Verify all identity functions
-(e.g. forgot password, change password, change email, manage 2FA token, etc.)
-have the security controls,
-as the primary authentication mechanism (e.g. login form).
+. [[r1]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
+The product does not require that users should have strong passwords,
+which makes it easier for attackers to compromise user accounts.
+
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.1 Password Security Requirements.(2.1.5)]
+Verify users can change their password.
