--- a/new/content/pages/products/index.adoc
+++ b/new/content/pages/products/index.adoc
@@ -41,6 +41,18 @@ remediation of open vulnerabilities.
 Fluid Attacks creates personalized exploits that perform these attacks.
 
 [role="w-products center pt3"]
+image::work-asserts.png[link="#"]
+
+== Asserts
+
+*Asserts* is an open-source tool
+that looks for deterministic and peripheral vulnerabilities
+performing Dynamic and Static Application Security Testing (`DAST` - `SAST`).
+*Asserts* also automates attacks
+to verify the status (open/closed) of vulnerabilities on your system
+and gives you fast feedback on the proposed solutions.
+
+[role="w-products center pt3"]
 image::use-cases-rules.png[link="#"]
 
 == Rules
