feat(doc): #2994.113 add refs to r132
- Updated R132 to consider long passwords
- Added ASVS, CWE and NIST references
- Updated R132 keywords
- Fixed typo in R238


Former-commit-id: f0cbc27887fffe0ffa80c4f23dd0568b12fe839f

--- a/content/pages/rules/authentication/238/index.adoc
+++ b/content/pages/rules/authentication/238/index.adoc
@@ -12,7 +12,7 @@ The system must guarantee that
 the person performing the password recovery or reset process
 is actually the owner.
 
-Description
+== Description
 
 Systems must have mechanisms that enable users to update and recover their
 passwords while guaranteeing the authenticity of the request.
