--- a/content/pages/rules/credentials/132/index.adoc
+++ b/content/pages/rules/credentials/132/index.adoc
@@ -1,21 +1,23 @@
 :slug: rules/132/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining passphrases with at least 4 words to improve credentials security.
-:keywords: Requirement, Security, Credentials, Access, Passphrases, Words
+:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining passphrases with at least 4 words and allowing them to be more than 64 characters long.
+:keywords: Password, Length, Passphrase, ASVS, CWE, NIST
 :rules: yes
 
 = R132. Passphrases with at least 4 words
 
 == Requirement
 
-Passphrases must be at least 4 words long.
+The system must require passphrases to be at least 4 words long and allow them
+to have 64 characters or more .
 
 == Description
 
-The following security requirement addresses the importance
-of establishing passphrases with at least four (*4*) words of length.
-A passphrase is a sequence of words
-whose length is higher but more secure than other types of passwords.
+Passwords are identity assertion elements that can be easily forgotten.
+Passphrases are sequences of words that are longer than passwords but are also
+easier to remember.
+Thus, systems should enforce the usage of passphrases at least 4 words long
+and allow them to have 64 characters or more.
 
 == Findings
 
@@ -25,10 +27,14 @@ whose length is higher but more secure than other types of passwords.
 
 == References
 
-. [[r1]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.7+]
-Verify password entry fields allow, or encourage, the use of passphrases,
-and do not prevent long passphrases or highly complex passwords being entered.
+. [[r1]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
+The product does not require that users should have strong passwords,
+which makes it easier for attackers to compromise user accounts.
 
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.27+]
-Verify that measures are in place to block the use
-of commonly chosen passwords and weak pass-phrases.
+. [[r2]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.1.2 Memorized Secret Verifiers]
+Verifiers SHOULD permit subscriber-chosen memorized secrets at least 64
+characters in length.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.1 Password Security Requirements.(2.1.2)]
+Verify that passwords 64 characters or longer are permitted.
